# printf

./: .gitignore  CMakeLists.txt  README.md
include/: buffer.h  error_handling.h  format_parser.h  hashmap.h  itoa.h  printf.h  vfprintf.h
src/: buffer.c  error_handling.c  format_parser.c  hashmap.c  itoa.c  main.c  printf.c  vfprintf.c
tests/: test_buffer.c  test_format_parser.c
